<resources>
    <string name="app_name">ToDoList</string>
    <string name="add_task">Add task</string>
    <string name="enter_task_text">Enter task text</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="confirm_message">Are you sure you want to delete this task?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="task_not_changed_message">Task must be edited before save!</string>
    <string name="task_can_not_be_saved_message">Changes have not been saved! Please, try again</string>
    <string name="task_list_empty">Task list is empty!</string>
</resources>